--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-loader-spinner": "^6.1.6",
+    "react-loader-spinner": "latest",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
     "reactjs-popup": "^2.0.6",
