--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,10 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "node": "^16.13.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-loader-spinner": "latest",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
     "reactjs-popup": "^2.0.6",
