Add semver to fix deployment error

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^2.3.3",
     "npmlog": "^7.0.1",
     "path": "^0.12.7",
+    "semver": "^7.7.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
