--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,7 @@
     "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "chmod +x node_modules/.bin/react-scripts"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -24,6 +23,9 @@
   "devDependencies": {
     "eslint": "^7.14.0",
     "eslint-config-react-app": "^6.0.0"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "browserslist": {
     "production": [
