--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.6",
-    "webpack": "^5.100.1"
+    "webpack": "^5.100.1",
+    "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
