--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,13 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
-    "reactjs-popup": "^2.0.6",
-    "webpack": "^5.100.1",
-    "webpack-cli": "^6.0.1"
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
-    "eslint-config-react-app": "^6.0.0"
+    "eslint-config-react-app": "^6.0.0",
+    "webpack": "^5.100.1",
+    "webpack-cli": "^6.0.1"
   },
   "engines": {
     "node": "18.x"
