--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
-  "version": 2,
+  "projectSettings": {
+    "framework": "create-react-app"
+  },
   "builds": [
     {
       "src": "frontend/package.json",
